plugins {
    id 'java'
    id 'application'
    id 'java-library'
}


group 'top.werls'
version '1.0-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
    implementation 'com.alibaba:fastjson:2.0.45'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
}

test {
    useJUnitPlatform()
}


application {
    mainClassName = "top.werls.wallpaper.App"
}
jar {
//      配置jar 包主类 https://stackoverflow.com/questions/4871656/using-gradle-to-build-a-jar-with-dependencies?answertab=active#tab-top
//    from {
//        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
//    }
    // 新方法 ，https://docs.gradle.org/current/userguide/working_with_files.html#sec:creating_uber_jar_example
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
    }
    manifest {
        attributes(
                'Main-Class': 'top.werls.wallpaper.App'
        )
    }
}